Use `LWCToolkit.invokeAndWait` to switch to the EDT while live-resizing